synaptic (0.62.6) unstable; urgency=low

  * po/th.po:
    - updated Thai translation (closes: #512605)
  * gtk/rgdebinstallprogress.cc:
    - if forkpty() show a propper error message
      (thanks to Evan) 
  * gtk/rgfetchprogress.cc:
    - if the ETA is huge report it as unknown (LP: #322871)
  * debian/control:
    - add depends to hicolor-icon-theme

 --

synaptic (0.62.5) unstable; urgency=low

  * gtk/rgsummarywindow.cc:
    - fix "Show details" button label (LP: #4055)
  * gtk/glade/window_summary.glade:
    - fix layout issues (LP: #314905), thanks to
      Gabor Kelemen
  * po/sk.po:
    - updated Slovak translation, closes: #500957
  * po/br.po:
    - add Breton language
  * data/synaptic.desktop.in:
    - desktop file cleanups (thanks to Chris Coulson)
      LP: #298172

 -- Michael Vogt <mvo@debian.org>  Tue, 20 Jan 2009 09:45:41 +0100

synaptic (0.62.4) unstable; urgency=low

  * help/C/synaptic.xml:
    -  "preferences" -> "settings", closes: #406430
  * po/sk.po:
    - added Slovak translation, closes: #500957)
  * po/zh_CN.po:
    - updated translation, thanks to Deng Xiyue
      closes: #458423
  * po/fr.po: 
    - fixed typo, thanks to Philippe Cloutier
      closes: #440971
    - fixed typo, thanks to Christophe Combelles
      closes: #357302
    - fixed typos, thanks to Filipus Klutiero
      closes: #342643, #339134
   * po/ca.po:
     - fix catalan translation, closes: #383450
   * typo fix, thanks to Philip Miller, closes: #358694
   * typo and de.po fixes (thanks to Jens Seidel),
     closes: #313831
  * common/rinstallprogress.cc:
    - fix typo and incorrect message (LP: #139760)

 -- Michael Vogt <mvo@debian.org>  Wed, 07 Jan 2009 20:17:12 +0100

synaptic (0.62.3) unstable; urgency=low

  * gtk/rgpkgdetails.{cc,h}:
    - download/show big image when clicking on the
      thumbnail 
  * debian/rules, .bzr-builddeb/default.conf
    - bybye arch-build, hello "bzr-buildpackage"
