@@ -9,6 +9,8 @@ synaptic (0.62.6) unstable; urgency=low
     - if the ETA is huge report it as unknown (LP: #322871)
   * debian/control:
     - add depends to hicolor-icon-theme
+  * common/sections_trans.cc:
+    - updated for the new section (like httpd, vcs, ...)
 
  --
 
